<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_linkIn"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="@string/linkIn" />
        <item
            android:id="@+id/nav_jobSearch"
            android:icon="@drawable/ic_send_black_24dp"
            android:title="@string/jobSearch" />
        <item
            android:id="@+id/nav_pulse"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/pulse" />
        <item
            android:id="@+id/nav_cinema"
            android:icon="@drawable/ic_movie_black_24dp"
            android:title="@string/cinema" />

        <item
            android:id="@+id/nav_winzin"
            android:icon="@drawable/ic_perm_media_black_24dp"
            android:title="@string/winzin" />
    </group>


</menu>
