<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/verysmall_margin">

     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/movie2"
         />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

             <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movietitle"
            android:textSize="@dimen/title_size"
            android:paddingTop="@dimen/main_margin"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/small_margin">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:background="#FFFFFF"
                android:textStyle="bold"/>

            <!--<de.hdodenhof.circleimageview.CircleImageView-->
            <ImageView
                android:layout_width="@dimen/main_margin3"
                android:layout_height="@dimen/main_margin3"
                android:layout_marginLeft="@dimen/small_margin"
                android:src="@drawable/ic_share_black_24dp"
                android:background="#FFFFFF"/>


        </LinearLayout>

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FFFFFF"
        android:layout_margin="@dimen/verysmall_margin"
        android:padding="@dimen/small_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/storytitle"
        android:textStyle="bold"
        android:textSize="@dimen/main_margin"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="4"
        android:ellipsize="end"
        android:text="@string/storydescription"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/more"
        android:textColor="#2e7d32"
        android:textStyle="bold"
        android:textSize="@dimen/title_size"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showing"
        android:textStyle="bold"
        android:textSize="@dimen/main_margin"
        android:layout_marginLeft="@dimen/verysmall_margin"/>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF" />

    <!--android:scrollbars="vertical"-->

</LinearLayout>

</ScrollView>