<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/nav_header_height"
            android:src="@drawable/cover6"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <!--<ImageView-->
            <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/medium_margin"
            android:layout_height="@dimen/medium_margin"
            android:src="@drawable/profile"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/main_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/covertitle"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="#e1f5fe"
            />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/nav_header_height2"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:background="#FFFFFF"
        android:padding="@dimen/fab_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editorpick"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"

            android:layout_gravity="end"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title2"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/staff1"
            android:layout_marginTop="@dimen/fab_margin"
            android:scaleType="centerCrop"/>


    </LinearLayout>

    </FrameLayout>

</LinearLayout>

</ScrollView>